responsive tất cả view trong thư mục account, account->tasker

--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Register</title>
+    <title>Đăng nhập</title>
     <th:block th:include="fragment/layout :: head"> </th:block>
     <!--    <link rel="stylesheet" type="text/css" th:href="@{~/css/account/register.css}">-->
 </head>
@@ -17,12 +17,10 @@
 
     <div class="unit-5 overlay" style="background-image: url('/images/hero_1.jpg');">
         <div class="container text-center">
-            <h2 class="mb-0">Register</h2>
-            <p class="mb-0 unit-6"><a th:href="@{/}">Home</a> <span class="sep">></span> <span>Register</span></p>
+            <h2 class="mb-0">Đăng Nhập</h2>
+            <p class="mb-0 unit-6"><a th:href="@{/}">Trang chủ</a> <span class="sep">></span> <span>Đăng Nhập</span></p>
         </div>
     </div>
-
-
 
 
     <div class="site-section bg-light">
@@ -30,30 +28,31 @@
             <div class="row">
 
                 <div class="col-md-12 mb-5">
-
                     <form action="#" id="loginForm" class="p-5 bg-white">
                         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                         <div class="row form-group">
                             <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="login">User Name</label>
-                                <input name="username" type="text" id="login" class="form-control" placeholder="User Name">
+                                <label class="font-weight-bold" for="login">Tài khoản</label>
+                                <input name="username" type="text" id="login" class="form-control" placeholder="Tài khoản...">
                             </div>
                         </div>
 
+                        <div class="row form-group">
+                            <div class="col-md-12">
+                                <label class="font-weight-bold" for="password">Mật khẩu</label>
+                                <input name="password" type="password" id="password" class="form-control" placeholder="Mật khẩu...">
+                            </div>
+                        </div>
                         <div class="row form-group">
                             <div class="col-md-12 mb-3 mb-md-0">
-                                <label class="font-weight-bold" for="password">Password</label>
-                                <input name="password" type="password" id="password" class="form-control" placeholder="Password">
+                                <a th:href="@{/register}" class="hyperlink font-italic t-14">Bạn chưa có tài khoản? Bấm để đăng ký</a>
                             </div>
                         </div>
-
                         <div class="row form-group">
                             <div class="col-md-12 text-center">
-                                <input type="submit" value="Login" class="btn btn-primary  py-2 px-5">
+                                <input type="submit" value="Đăng Nhập" class="btn btn-primary  py-2 px-5">
                             </div>
                         </div>
-
-
                     </form>
                 </div>
 
