--- a/src/main/resources/templates/account/intro.html
+++ b/src/main/resources/templates/account/intro.html
@@ -4,6 +4,7 @@
     <title>Việc nhà</title>
     <th:block th:include="fragment/layout :: head"> </th:block>
     <link rel="stylesheet" type="text/css" th:href="@{~/css/user-type/center-image.css}">
+    <link rel="stylesheet" th:href="@{~/css/responsive/account/intro.css}">
 </head>
 <body>
 
@@ -15,8 +16,8 @@
 
     <div style="height: 113px;"></div>
 
-    <div class="unit-5 overlay" style="background-image: url('/static/images/hero_1.jpg');">
-        <div class="container text-center">
+    <div class="unit-5 overlay" th:style="'background-image: url(' + @{~/images/hero_1.jpg} + ');'">
+        <div class="container text-center text-banner">
             <h2 class="mb-0">Trở thành thành viên ngay hôm nay</h2>
             <h4 class="mb-0 unit-6">Tận hưởng những giá trị mà TaskUnite mang lại</h4>
         </div>
@@ -25,9 +26,8 @@
 
     <div class="site-section" data-aos="fade">
         <div class="container">
-            <div class="row align-items-center">
-
-                <div class="col-md-6 ml-auto content-right">
+            <div class="row">
+                <div class="col-md-6 ml-auto content-right mb-sm-1">
                     <div class="text-center mb-5 section-heading">
                         <h2>Bạn muốn trở thành Master ?</h2>
                     </div>
