--- a/src/main/resources/templates/account/tasker/step1.html
+++ b/src/main/resources/templates/account/tasker/step1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Job Finder &mdash; Colorlib Website Template</title>
+    <title>Đăng ký trở thành nhân viên TaskUnite</title>
     <th:block th:include="fragment/layout :: head"></th:block>
 </head>
 <body>
@@ -17,9 +17,9 @@
     <div class="unit-5 overlay" th:style="'background-image: url(' + @{/images/hero_1.jpg} + ');'"
          style="background-image: url('images/hero_1.jpg');">
         <div class="container text-center">
-            <h2 class="mb-0">On your marks</h2>
-            <p class="mb-0 unit-6"><a href="../index.html">Home</a> <span class="sep">></span>
-                <span>Become Tasker</span>
+            <h2 class="mb-0">Trở thành nhân viên</h2>
+            <p class="mb-0 unit-6"><a th:href="@{/}">Trang chủ</a> <span class="sep">></span>
+                <span>Trở thành nhân viên (Bước 1)</span>
             </p>
         </div>
     </div>
